# SREES_2026_Gilic_VDFIG

./: .gitignore  CMakeLists.txt  README.md
EQPlugin/: EQPlugin.cmake
EQPlugin/src/: DFIGPlugin.cpp  PowerSystemModel.h
TestEQPlugin/src/testData/: case9.xml
dfigPlugin/: CMakeLists.txt
dfigPlugin/src/: DFIGPlugin.h  ViewConv.h
docs/: Analysis_Results_Bosnian.lyx  DFIG_Documentation.lyx  DFIG_Documentation_Bosnian.lyx  README.md
presentation/: DFIG_Presentation.odp  DFIG_Presentation.pptx  ReadMe.txt
src/: CMakeLists.txt  DFIGPlugin.cmake  ModelConverter.cpp  ModelConverter.h  TabView.h  ViewOptions.h  WindowPlugin.h  test_runner.cpp
src/arch/: MemoryOut.h
src/dfigPlugin/: dfigPlugin.cmake
src/dfigPlugin/src/: DFIGPlugin.cpp
src/dfigPlugin/testOutput/: test9.dmodl  test9.vmodl
src/res/: main.xml
src/testData/: case118.xml  case30.xml
src/test_runner/: CMakeLists.txt
src/test_runner/src/: main.cpp
src/test_runner/src/testData/: case14.xml  case145.xml  case2383wp.xml  case300.xml  case3120sp.xml  case39.xml  download_and_convert.py
src/test_runner/src/testOutput/: test30.dmodl  test30.vmodl
test_runner/: test_runner.cmake
